[tool.poetry]
name = "kl-divergence-lm"
version = "0.1.0"
description = ""
authors = ["jtheol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
ipykernel = "^6.29.5"
pyarrow = "^17.0.0"
setuptools = "^75.1.0"
wheel = "^0.44.0"
transformers = "^4.45.2"
scienceplots = "^2.1.1"
latex = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
